# gb-emu

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  eslint.config.js  gbemu-wasm.dockerfile  gbemu.dockerfile  generateReleaseNotes.mjs  index.html  inst_todo.sh  mnenonics  package-lock.json  package.json  progress.py  stylelint.config.mjs  swa-cli.config.json  tailwind.config.js  tsconfig.app.json  vcpkg.json  vite.config.ts
.github/workflows/: azure-static-web-apps-blue-sand-06f7bf303.yml  deploy.yml  tests.yml
applications/gbemu-native/: CMakeLists.txt  main.c
applications/gbemu-web/: package-lock.json  package.json
applications/gbemu-web/src/: gbemu.d.ts  gbemu.mjs  gbemu.wasm  index.css  main.tsx
applications/gbemu-web/src/components/: Panel.tsx  PanelGrid.tsx
applications/gbemu-web/src/components/panels/: CPURegistersPanel.tsx  ControlsPanel.tsx  MemoryPanel.tsx  TileDataPanel.tsx  getAddressLabel.ts
applications/gbemu-web/src/context/: EmulatorContext.tsx  GBEmuProvider.tsx  GlobalDebuggerSettingsProvider.tsx  updateFrequencyOptions.ts  useGlobalDebuggerSettings.ts
applications/gbemu-web/src/hooks/: useGameboy.ts  useInterrupts.ts  useTileData.ts  useTimers.ts
applications/gbemu-web/src/pages/: Debug.tsx  Home.tsx  Play.tsx
applications/gbemu-web/src/routes/: Routes.tsx
cmake/: CreateInstaller.cmake  Sanitizers.cmake
docker/: gbemu-test.dockerfile  gbemu.dockerfile
gb-asm/: main.c
gbemu/: bus.c  bus.h  cartridge.c  cartridge.h  cpu.c  cpu.h  emulator.c  emulator.h  interrupt_controller.c  interrupt_controller.h  joypad.c  joypad.h  lcd.c  lcd.h  mbc.c  mbc.h  ppu.c  ppu.h  registers.c  registers.h  timer_controller.c  timer_controller.h
gbemu/instructions/: instruction.h  instructions.c  instructions.h
gbemu/mbcs/: mbc3.c  mbc3.h  mbc3_ram_battery.c  mbc3_ram_battery.h  rom_only.c  rom_only.h
gbemuweb/: .clang-tidy  bindings.cpp  bindings.hpp  bindings_glue.cpp  gbemu.hpp
include/: cpu.h  instructions.h  memory.h  registers.h  types.h
integration_tests/: unity_internals.h
modules/gbemu/: .clang-tidy  CMakeLists.txt  bus.c  bus.h  cartridge.c  cartridge.h  cpu.c  cpu.h  emulator.c  lcd.c  lcd.h  mbc.c  mbc.h  ppu.c  ppu.h
modules/gbemu-bindings/: CMakeLists.txt  bindings.cpp  bindings.idl  bindings_glue.cpp  gbemu.hpp
modules/gbemu/instructions/: instructions.c  instructions.h
modules/gbemu/mbcs/: mbc3_ram_battery.h  rom_only.c  rom_only.h
modules/gbemu/tests/: CMakeLists.txt
modules/gbemu/tests/integration/: blarggs.c
public/: gbemu.js  gbemu.wasm  staticwebapp.config.json
src/: cpu.c  gbemu.d.ts  index.css  instructions.c  main.c  main.tsx  memory.c
src/components/: FrequencyChangeButton.tsx  Header.tsx  ReleaseNotesPreview.tsx
src/components/panels/: DisassemblyPanel.tsx  InterruptsPanel.tsx  MemoryPanel.tsx  TileDataPanel.tsx  TimersPanel.tsx
src/context/: EmulatorContext.tsx  EmulatorProvider.tsx  GBEmuContext.tsx  GlobalDebuggerSettingsContext.tsx
src/hooks/: useBreakpoints.ts  useCPURegisters.ts  useDebugRefetchInterval.ts  useDisassembly.ts  useGameboy.ts  useInstructions.ts  useInterrupts.ts
src/pages/: Debug.tsx  Home.tsx  Pages.ts  Play.tsx  ReleaseNotes.tsx
src/routes/: Routes.tsx
tests/: source.s
